cmake_minimum_required(VERSION 3.16.3 FATAL_ERROR)
project(turtle)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
add_library(turtle SHARED turtle.cpp turtle.h CTurtle-master/turtle.c CTurtle-master/turtle.h)
target_link_libraries(turtle -lSDL2)
if(UNIX)
  include_directories(/opt/zuko/include)
endif()
if(WIN32)
  include_directories(C:\zuko\include)
endif()
